--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@ h1 {
 }
 
 .zone-item img {
-    width: 512px;
-    height: 512px;
+    width: 100%;
+    height: auto;
     object-fit: cover;
 }
 
